feat: 지역 선택 버튼 클릭 리스너 추가

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,13 @@
         >
 
         <Button
+            android:id="@+id/location_gn_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="강남" />
 
         <Button
+            android:id="@+id/location_ys_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="역삼" />
