chore: 식당 정보 카드 표시 로직 기초 구현(ViewPager)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
             />
         
         <androidx.viewpager2.widget.ViewPager2
-            android:background="@color/white"
+            android:id="@+id/restaurant_view_pager"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_gravity="bottom"
