--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/restaurant_view_pager"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="@dimen/restaurant_item_height"
             android:layout_gravity="bottom"
             android:layout_marginBottom="28dp"
             />
