--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="pageMargin">15dp</dimen>
     <dimen name="offset">15dp</dimen>
     <dimen name="pageMarginAndOffset">30dp</dimen> <!--pageMargin과 offset의 합이어야 함-->
+    <dimen name="restaurant_item_height">150dp</dimen>
 </resources>
