--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,10 +28,25 @@
 
     </LinearLayout>
 
-    <com.naver.maps.map.MapView
-        android:id="@+id/naver_map"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        >
+
+        <com.naver.maps.map.MapView
+            android:id="@+id/naver_map"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+        
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/restaurant_view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/restaurant_item_height"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="28dp"
+            />
+
+    </FrameLayout>
 
 </LinearLayout>
