--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimary">#FE7235</color>
+    <color name="colorSecondary">#FCF5EF</color>
     <color name="lightGray">#E0E0E0</color>
     <color name="gray600">#757575</color>
 </resources>
