fix: 식당 정보 텍스트 스타일(크기, 색상) 수정

--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -15,9 +15,10 @@
         android:id="@+id/restaurant_name_tv"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:textColor="@color/black"
-        android:textSize="12dp"
+        android:textColor="@color/gray900"
+        android:textSize="12sp"
         android:textStyle="bold"
+        android:layout_marginBottom="4sp"
         app:layout_constraintBottom_toTopOf="@+id/restaurant_price_layout"
         app:layout_constraintStart_toStartOf="parent"
         tool:text="식당 이름" />
@@ -47,6 +48,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/restaurant_info_margin_size_8dp"
+        android:layout_marginBottom="@dimen/restaurant_info_text_margin_bottom"
         app:layout_constraintBottom_toTopOf="@+id/restaurant_time_layout"
         app:layout_constraintEnd_toStartOf="@+id/restaurant_cv"
         app:layout_constraintStart_toStartOf="parent">
@@ -55,8 +57,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/restaurant_info_price"
-            android:textColor="@color/black"
-            android:textSize="@dimen/restaurant_info_text_size_8dp"
+            android:textColor="@color/gray800"
+            android:textSize="@dimen/restaurant_info_text_size"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -67,8 +69,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tool:text="8,000원"
-            android:textColor="@color/black"
-            android:textSize="@dimen/restaurant_info_text_size_8dp"
+            android:textColor="@color/gray900"
+            android:textSize="@dimen/restaurant_info_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -81,6 +83,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/restaurant_info_margin_size_8dp"
+        android:layout_marginBottom="@dimen/restaurant_info_text_margin_bottom"
         app:layout_constraintBottom_toTopOf="@+id/restaurant_phone_number_layout"
         app:layout_constraintEnd_toStartOf="@+id/restaurant_cv"
         app:layout_constraintStart_toStartOf="parent">
@@ -89,8 +92,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/restaurant_info_time"
-            android:textColor="@color/black"
-            android:textSize="@dimen/restaurant_info_text_size_8dp"
+            android:textColor="@color/gray800"
+            android:textSize="@dimen/restaurant_info_text_size"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -101,8 +104,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="11:00 ~ 14:00"
-            android:textColor="@color/black"
-            android:textSize="@dimen/restaurant_info_text_size_8dp"
+            android:textColor="@color/gray900"
+            android:textSize="@dimen/restaurant_info_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -115,6 +118,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/restaurant_info_margin_size_8dp"
+        android:layout_marginBottom="@dimen/restaurant_info_text_margin_bottom"
         app:layout_constraintBottom_toTopOf="@+id/restaurant_location_description_layout"
         app:layout_constraintEnd_toStartOf="@+id/restaurant_cv"
         app:layout_constraintStart_toStartOf="parent">
@@ -123,8 +127,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/restaurant_info_phone_number"
-            android:textColor="@color/black"
-            android:textSize="@dimen/restaurant_info_text_size_8dp"
+            android:textColor="@color/gray800"
+            android:textSize="@dimen/restaurant_info_text_size"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -135,8 +139,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="02-950-2345"
-            android:textColor="@color/black"
-            android:textSize="@dimen/restaurant_info_text_size_8dp"
+            android:textColor="@color/gray900"
+            android:textSize="@dimen/restaurant_info_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -158,8 +162,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/restaurant_info_location_description"
-            android:textColor="@color/black"
-            android:textSize="@dimen/restaurant_info_text_size_8dp"
+            android:textColor="@color/gray800"
+            android:textSize="@dimen/restaurant_info_text_size"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -170,8 +174,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="서울 서초구 서초대로78길 38, 지하 1층"
-            android:textColor="@color/black"
-            android:textSize="@dimen/restaurant_info_text_size_8dp"
+            android:textColor="@color/gray900"
+            android:textSize="@dimen/restaurant_info_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
