--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="colorSecondary">#FCF5EF</color>
     <color name="lightGray">#E0E0E0</color>
     <color name="gray600">#757575</color>
+    <color name="gray800">#424242</color>
+    <color name="gray900">#212121</color>
 </resources>
