--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,7 +7,8 @@
     <!--식당 정보 아이템 관련-->
     <dimen name="restaurant_item_height">150dp</dimen>
     <dimen name="restaurant_item_elevation">4dp</dimen>
-    <dimen name="restaurant_info_text_size_8dp">8dp</dimen>
+    <dimen name="restaurant_info_text_size">10sp</dimen>
+    <dimen name="restaurant_info_text_margin_bottom">2.5sp</dimen>
     <dimen name="restaurant_info_image_size">66dp</dimen>
     <dimen name="restaurant_info_margin_size_8dp">8dp</dimen>
     <dimen name="restaurant_info_padding_size_8dp">8dp</dimen>
