--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,19 +12,34 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:orientation="horizontal"
+        android:paddingVertical="8dp"
+        android:paddingHorizontal="14dp"
         >
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/location_gn_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="강남" />
+            android:layout_width="50dp"
+            android:layout_height="24dp"
+            android:background="@drawable/selector_location_button"
+            android:layout_marginRight="8dp"
+            android:text="강남"
+            android:textSize="12dp"
+            android:textColor="@color/gray600"
+            android:textStyle="bold"
+            android:stateListAnimator="@null"
+            />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/location_ys_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="역삼" />
+            android:layout_width="50dp"
+            android:layout_height="24dp"
+            android:background="@drawable/selector_location_button"
+            android:text="역삼"
+            android:textSize="12dp"
+            android:textColor="@color/gray600"
+            android:textStyle="bold"
+            android:stateListAnimator="@null"
+            />
 
     </LinearLayout>
 
@@ -38,6 +53,38 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             />
+
+        <!--'내 주변' 버튼-->
+        <LinearLayout
+            android:id="@+id/current_location_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@drawable/current_location_button"
+            android:gravity="center_vertical"
+            android:layout_gravity="top|right"
+            android:paddingVertical="6dp"
+            android:paddingHorizontal="8dp"
+            android:layout_margin="16dp"
+            >
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/current_location_icon"
+                android:layout_marginEnd="4dp"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="내 주변"
+                android:textSize="12dp"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimary"
+                />
+
+        </LinearLayout>
         
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/restaurant_view_pager"
