--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#FE7235</color>
+    <color name="colorSecondary">#FCF5EF</color>
+    <color name="lightGray">#E0E0E0</color>
+    <color name="gray600">#757575</color>
+    <color name="gray800">#424242</color>
+    <color name="gray900">#212121</color>
 </resources>
