--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -11,6 +11,135 @@
     android:layout_marginHorizontal="@dimen/pageMarginAndOffset"
     >
 
+    <LinearLayout
+        android:id="@+id/restaurant_menu_layout"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/restaurant_name_tv"
+        android:visibility="gone"
+        tool:visibility="visible"
+        >
+
+        <!--메인 메뉴-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="top"
+            android:weightSum="10"
+            >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="메인 메뉴"
+                android:textSize="@dimen/restaurant_info_text_size"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimary"
+                android:layout_weight="2"
+                />
+
+            <TextView
+                android:id="@+id/restaurant_menu_main_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                tool:text="카레 염지 순살치킨, 제육볶음, 알리오 올리오 스파게티, 닭강정, 봉황 감자탕"
+                android:textSize="@dimen/restaurant_info_text_size"
+                android:textColor="@color/gray900"
+                android:layout_weight="8"
+                />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/borderGray"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="6dp"
+            />
+
+        <!--사이드 메뉴-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="top"
+            android:weightSum="10"
+            >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="사이드 메뉴"
+                android:textSize="@dimen/restaurant_info_text_size"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimary"
+                android:layout_weight="2"
+                />
+
+            <TextView
+                android:id="@+id/restaurant_menu_side_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                tool:text="반찬 3종, 김치, 샐러드"
+                android:textSize="@dimen/restaurant_info_text_size"
+                android:textColor="@color/gray900"
+                android:layout_weight="8"
+                />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/borderGray"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="6dp"
+            />
+
+        <!--후식-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="top"
+            android:weightSum="10"
+            >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="후식"
+                android:textSize="@dimen/restaurant_info_text_size"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimary"
+                android:layout_weight="2"
+                />
+
+            <TextView
+                android:id="@+id/restaurant_menu_dessert_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                tool:text="토스트(누텔라, 딸기잼), 매실차"
+                android:textSize="@dimen/restaurant_info_text_size"
+                android:textColor="@color/gray900"
+                android:layout_weight="8"
+                />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/borderGray"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="6dp"
+            />
+
+    </LinearLayout>
+
     <TextView
         android:id="@+id/restaurant_name_tv"
         android:layout_width="wrap_content"
