feat: 가로 스크롤 뷰 아이템의 height가 wrap_content로 설정되도록 구현

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,7 @@
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/restaurant_view_pager"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/restaurant_item_height"
+            android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_marginBottom="28dp"
             />
