--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -14,7 +14,7 @@
     <LinearLayout
         android:id="@+id/restaurant_menu_layout"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/restaurant_name_tv"
         android:visibility="gone"
