--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_marginBottom="10sp"
         app:layout_constraintBottom_toTopOf="@+id/restaurant_name_tv"
         android:visibility="gone"
         tool:visibility="visible"
@@ -135,19 +136,36 @@
             android:layout_height="1dp"
             android:background="@color/borderGray"
             android:layout_marginTop="4dp"
-            android:layout_marginBottom="6dp"
             />
 
     </LinearLayout>
 
     <TextView
+        android:id="@+id/restaurant_menu_more_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/restaurant_info_menu_more"
+        android:textColor="@color/gray500"
+        android:textSize="@dimen/restaurant_info_text_size_8sp"
+        android:textStyle="bold"
+        android:layout_marginTop="4dp"
+        android:paddingBottom="6dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/restaurant_menu_layout"
+        android:visibility="gone"
+        tool:visibility="visible"
+        />
+
+    <TextView
         android:id="@+id/restaurant_name_tv"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:textColor="@color/gray900"
-        android:textSize="12sp"
-        android:textStyle="bold"
         android:layout_marginBottom="4sp"
+        android:textColor="@color/gray900"
+        android:textSize="12dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/restaurant_price_layout"
         app:layout_constraintStart_toStartOf="parent"
         tool:text="식당 이름" />
