feat: 메뉴 정보 조회 로직 구현 (#12)
* feat: 메뉴 정보 조회 로직 구현

* feat: 메뉴 정보 레이아웃 구현

* fix: 최초 ViewPager 생성시 데이터도 새롭게 받아오는 로직 제거

* fix: 가로 스크롤 뷰의 마진 값 변경

* feat: 가로 스크롤 뷰 아이템의 height가 wrap_content로 설정되도록 구현

* feat: 메뉴 '자세히 보기' 텍스트 구현

* feat: 메뉴 '자세히 보기' 텍스트 수정

* feat: 메뉴 다이얼로그 구현

* fix: 메뉴 다이얼로그의 제목과 내용 텍스트 간격 넓힘

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="pageMargin">15dp</dimen>
-    <dimen name="offset">15dp</dimen>
-    <dimen name="pageMarginAndOffset">30dp</dimen> <!--pageMargin과 offset의 합이어야 함-->
+    <dimen name="pageMargin">10dp</dimen>
+    <dimen name="offset">10dp</dimen>
+    <dimen name="pageMarginAndOffset">20dp</dimen> <!--pageMargin과 offset의 합이어야 함-->
 
     <!--식당 정보 아이템 관련-->
     <dimen name="restaurant_item_height">150dp</dimen>
     <dimen name="restaurant_item_elevation">4dp</dimen>
     <dimen name="restaurant_info_text_size">10sp</dimen>
+    <dimen name="restaurant_info_text_size_8sp">8sp</dimen>
     <dimen name="restaurant_info_text_margin_bottom">2.5sp</dimen>
     <dimen name="restaurant_info_image_size">66dp</dimen>
     <dimen name="restaurant_info_margin_size_8dp">8dp</dimen>
     <dimen name="restaurant_info_padding_size_8dp">8dp</dimen>
+    
+    <!--메뉴 정보 다이얼로그 관련-->
+    <dimen name="menu_title_text_size">16sp</dimen>
+    <dimen name="menu_content_text_size">14sp</dimen>
 </resources>
