--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="pageMargin">10dp</dimen>
+    <dimen name="pageMargin">1dp</dimen>
     <dimen name="offset">10dp</dimen>
-    <dimen name="pageMarginAndOffset">20dp</dimen> <!--pageMargin과 offset의 합이어야 함-->
+    <dimen name="pageMarginAndOffset">11dp</dimen> <!--pageMargin과 offset의 합이어야 함-->
 
     <!--식당 정보 아이템 관련-->
     <dimen name="restaurant_item_height">150dp</dimen>
     <dimen name="restaurant_item_elevation">4dp</dimen>
+    <dimen name="restaurant_item_corner_radius">10dp</dimen>
     <dimen name="restaurant_info_text_size">10sp</dimen>
     <dimen name="restaurant_info_text_size_8sp">8sp</dimen>
     <dimen name="restaurant_info_text_margin_bottom">2.5sp</dimen>
