--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="borderGray">#EEEEEE</color>
     <color name="gray500">#9E9E9E</color>
     <color name="gray600">#757575</color>
+    <color name="gray700">#616161</color>
     <color name="gray800">#424242</color>
     <color name="gray900">#212121</color>
 </resources>
