fix: sp 대신 dp로 통일

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,13 +9,13 @@
     <dimen name="restaurant_item_elevation">4dp</dimen>
     <dimen name="restaurant_item_corner_radius">10dp</dimen>
     <dimen name="restaurant_info_text_size">10sp</dimen>
-    <dimen name="restaurant_info_text_size_8sp">8sp</dimen>
-    <dimen name="restaurant_info_text_margin_bottom">2.5sp</dimen>
+    <dimen name="restaurant_info_text_size_8dp">8dp</dimen>
+    <dimen name="restaurant_info_text_margin_bottom">2.5dp</dimen>
     <dimen name="restaurant_info_image_size">66dp</dimen>
     <dimen name="restaurant_info_margin_size_8dp">8dp</dimen>
     <dimen name="restaurant_info_padding_size_8dp">8dp</dimen>
     
     <!--메뉴 정보 다이얼로그 관련-->
-    <dimen name="menu_title_text_size">16sp</dimen>
-    <dimen name="menu_content_text_size">14sp</dimen>
+    <dimen name="menu_title_text_size">16dp</dimen>
+    <dimen name="menu_content_text_size">14dp</dimen>
 </resources>
