--- a/app/src/main/res/layout/dialog_location_permission.xml
+++ b/app/src/main/res/layout/dialog_location_permission.xml
@@ -31,7 +31,7 @@
             android:layout_height="30dp"
             android:stateListAnimator="@null"
             android:text="취소"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:textColor="@color/gray600"
             android:background="@drawable/white_button_background"
             android:layout_marginEnd="16dp"
@@ -43,7 +43,7 @@
             android:layout_height="30dp"
             android:stateListAnimator="@null"
             android:text="동의"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:textColor="@color/white"
             android:background="@drawable/color_button_background"
             />
