--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginBottom="10sp"
+            android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toTopOf="@+id/restaurant_name_tv"
             android:visibility="gone"
             tool:visibility="visible"
@@ -152,7 +152,7 @@
             android:layout_height="wrap_content"
             android:text="@string/restaurant_info_menu_more"
             android:textColor="@color/gray500"
-            android:textSize="@dimen/restaurant_info_text_size_8sp"
+            android:textSize="@dimen/restaurant_info_text_size_8dp"
             android:textStyle="bold"
             android:layout_marginTop="4dp"
             android:paddingBottom="6dp"
@@ -168,7 +168,7 @@
             android:id="@+id/restaurant_name_tv"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_marginBottom="4sp"
+            android:layout_marginBottom="4dp"
             android:textColor="@color/gray900"
             android:textSize="12dp"
             android:textStyle="bold"
