feat: hdpi(~240dpi) 전용 dimens.xml 파일 추가

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,18 +12,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:paddingHorizontal="14dp"
-        android:paddingVertical="8dp">
+        android:paddingHorizontal="@dimen/location_select_layout_padding_horizontal"
+        android:paddingVertical="@dimen/location_select_layout_padding_vertical">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/location_gn_btn"
-            android:layout_width="50dp"
-            android:layout_height="24dp"
+            android:layout_width="@dimen/location_select_button_width"
+            android:layout_height="@dimen/location_select_button_height"
             android:background="@drawable/white_button_background"
             android:stateListAnimator="@null"
             android:text="강남"
             android:textColor="@color/gray600"
-            android:textSize="12dp"
+            android:textSize="@dimen/location_select_button_text"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,14 +31,14 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/location_ys_btn"
-            android:layout_width="50dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="8dp"
+            android:layout_width="@dimen/location_select_button_width"
+            android:layout_height="@dimen/location_select_button_height"
+            android:layout_marginStart="@dimen/location_select_button_margin_start"
             android:background="@drawable/white_button_background"
             android:stateListAnimator="@null"
             android:text="역삼"
             android:textColor="@color/gray600"
-            android:textSize="12dp"
+            android:textSize="@dimen/location_select_button_text"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/location_gn_btn"
@@ -48,7 +48,7 @@
             android:id="@+id/feedback_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="8dp"
+            android:padding="@dimen/location_select_layout_feedback_button_padding"
             android:src="@drawable/icon_feedback"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
