--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -17,6 +17,7 @@
         android:padding="@dimen/restaurant_info_padding_size_8dp"
         >
 
+        <!--메뉴 레이아웃-->
         <LinearLayout
             android:id="@+id/restaurant_menu_layout"
             android:layout_width="match_parent"
@@ -41,7 +42,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="메인 메뉴"
-                    android:textSize="@dimen/restaurant_info_text_size"
+                    android:textSize="@dimen/restaurant_info_menu_text_size"
                     android:textStyle="bold"
                     android:textColor="@color/colorPrimary"
                     android:layout_weight="2"
@@ -52,7 +53,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     tool:text="카레 염지 순살치킨, 제육볶음, 알리오 올리오 스파게티, 닭강정, 봉황 감자탕"
-                    android:textSize="@dimen/restaurant_info_text_size"
+                    android:textSize="@dimen/restaurant_info_menu_text_size"
                     android:textColor="@color/gray900"
                     android:layout_weight="8"
                     />
@@ -80,7 +81,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="사이드 메뉴"
-                    android:textSize="@dimen/restaurant_info_text_size"
+                    android:textSize="@dimen/restaurant_info_menu_text_size"
                     android:textStyle="bold"
                     android:textColor="@color/colorPrimary"
                     android:layout_weight="2"
@@ -91,7 +92,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     tool:text="반찬 3종, 김치, 샐러드"
-                    android:textSize="@dimen/restaurant_info_text_size"
+                    android:textSize="@dimen/restaurant_info_menu_text_size"
                     android:textColor="@color/gray900"
                     android:layout_weight="8"
                     />
@@ -119,7 +120,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="후식"
-                    android:textSize="@dimen/restaurant_info_text_size"
+                    android:textSize="@dimen/restaurant_info_menu_text_size"
                     android:textStyle="bold"
                     android:textColor="@color/colorPrimary"
                     android:layout_weight="2"
@@ -130,7 +131,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     tool:text="토스트(누텔라, 딸기잼), 매실차"
-                    android:textSize="@dimen/restaurant_info_text_size"
+                    android:textSize="@dimen/restaurant_info_menu_text_size"
                     android:textColor="@color/gray900"
                     android:layout_weight="8"
                     />
@@ -152,7 +153,7 @@
             android:layout_height="wrap_content"
             android:text="@string/restaurant_info_menu_more"
             android:textColor="@color/gray500"
-            android:textSize="@dimen/restaurant_info_text_size_8dp"
+            android:textSize="@dimen/restaurant_info_text_size_more"
             android:textStyle="bold"
             android:layout_marginTop="4dp"
             android:paddingBottom="6dp"
@@ -170,7 +171,7 @@
             android:layout_height="0dp"
             android:layout_marginBottom="4dp"
             android:textColor="@color/gray900"
-            android:textSize="12dp"
+            android:textSize="@dimen/restaurant_info_text_size_name"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/restaurant_price_layout"
             app:layout_constraintStart_toStartOf="parent"
