--- a/app/src/main/res/values-hdpi/dimens.xml
+++ b/app/src/main/res/values-hdpi/dimens.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--상단 지역 설정 레이아웃 관련-->
-    <dimen name="location_select_layout_padding_vertical">8dp</dimen>
+    <!--지역 설정 레이아웃 관련-->
+    <dimen name="location_select_layout_padding_vertical">10dp</dimen>
     <dimen name="location_select_layout_padding_horizontal">14dp</dimen>
-    <dimen name="location_select_layout_feedback_button_width">16dp</dimen>
-    <dimen name="location_select_layout_feedback_button_height">13dp</dimen>
-    <dimen name="location_select_layout_feedback_button_padding">8dp</dimen>
-    <dimen name="location_select_button_width">50dp</dimen>
-    <dimen name="location_select_button_height">25dp</dimen>
-    <dimen name="location_select_button_text">12dp</dimen>
-    <dimen name="location_select_button_margin_start">8dp</dimen>
+    <dimen name="location_select_layout_feedback_button_width">20dp</dimen>
+    <dimen name="location_select_layout_feedback_button_height">16dp</dimen>
+    <dimen name="location_select_layout_feedback_button_padding">10dp</dimen>
+    <dimen name="location_select_button_width">60dp</dimen>
+    <dimen name="location_select_button_height">30dp</dimen>
+    <dimen name="location_select_button_text">14dp</dimen>
+    <dimen name="location_select_button_margin_start">10dp</dimen>
 
     <dimen name="pageMargin">1dp</dimen>
     <dimen name="offset">10dp</dimen>
@@ -19,10 +19,10 @@
     <dimen name="restaurant_item_height">150dp</dimen>
     <dimen name="restaurant_item_elevation">4dp</dimen>
     <dimen name="restaurant_item_corner_radius">10dp</dimen>
-    <dimen name="restaurant_info_menu_text_size">10dp</dimen>
-    <dimen name="restaurant_info_text_size_name">12dp</dimen>
-    <dimen name="restaurant_info_text_size">8dp</dimen>
-    <dimen name="restaurant_info_text_size_more">8dp</dimen>
+    <dimen name="restaurant_info_menu_text_size">12dp</dimen>
+    <dimen name="restaurant_info_text_size_name">14dp</dimen>
+    <dimen name="restaurant_info_text_size">10dp</dimen>
+    <dimen name="restaurant_info_text_size_more">10dp</dimen>
     <dimen name="restaurant_info_text_margin_bottom">2.5dp</dimen>
     <dimen name="restaurant_info_image_size">66dp</dimen>
     <dimen name="restaurant_info_margin_size_8dp">8dp</dimen>
@@ -33,6 +33,6 @@
     <dimen name="menu_content_text_size">14dp</dimen>
 
     <!--위치 권한 동의 다이얼로그 관련-->
-    <dimen name="location_permission_description_text_size">12dp</dimen>
-    <dimen name="location_permission_button_text_size">12dp</dimen>
+    <dimen name="location_permission_description_text_size">14dp</dimen>
+    <dimen name="location_permission_button_text_size">14dp</dimen>
 </resources>
